# birlabrainiacs-schoolbot

./: .env.example  Dockerfile  Dockerfile_backend  Dockerfile_frontend  LICENSE.md  README.md  frontend.py  ingestion.py  pyproject.toml  restack_up.py
data/: Academic Calender 2024-25.pdf.md
src/: app.py  services.py
src/functions/bb/: schema.py  search.py
src/functions/llm/: chat.py
src/workflows/: workflow.py
